<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:infiniteCard="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.bakerj.infinitecards.InfiniteCardView
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/background"
        infiniteCard:animDuration="1000"
        infiniteCard:cardRatio="1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/pre"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="pre"
            android:background="#00f7fafb"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />

        <Button
            android:id="@+id/next"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="next"
            android:background="#00f7fafb"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />
    </LinearLayout>
</FrameLayout>