<resources>
    <string name="app_name">FibBreaker</string>
    <string name="name">Name</string>
    <string name="go">Go</string>
</resources>
